--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <title>Pinit</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<p>
-  <%= link_to 'Home', root_path %> |
-  <%= link_to 'About', about_path %>
-</p>
-<%= yield %>
+<%= render partial: "layouts/header" %>
 
+<div class="container">
+  <%= yield %>
+</div>
+
+<%= render partial: "layouts/footer" %>
 </body>
 </html>
