--- a/app/assets/stylesheets/custom_bs.css.scss
+++ b/app/assets/stylesheets/custom_bs.css.scss
@@ -1,8 +1,18 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
+
 $body-bg: #ecf0f1;
-$navbar-inverse-bg: #27ae60;
-$navbar-inverse-link-color: #fff;
-$brand-primary: #f39c12;
-$jumbotron-bg: #bdc3c7;
+$font-family-sans-serif: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height: 45px;
+$navbar-default-bg: #fff;
+$navbar-default-brand-color: #c0392b;
+$brand-primary: #c0392b;
+$jumbotron-bg: #fff;
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+.center {
+	text-align: center;
+}
+.navbar-brand {
+	font-weight: bold;
+}
