--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,11 @@
 <div class="jumbotron center">
-	<h1>Welcome ot my app!</h1>
-	<p>
-	  <%=link_to "Login", "#", class: "btn btn-default btn-lg" %> 
-	  <%=link_to "Sign up", "#", class: "btn btn-primary btn-lg" %>
-	</p>	
+	<h1>Welcome to my app!</h1>
+	
+	<% unless user_signed_in? %>
+	
+		<p>
+		  <%=link_to "Login", new_user_session_path, class: "btn btn-default btn-lg" %> 
+		  <%=link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+		</p>	
+	<% end %>
 </div>
