--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -3,6 +3,7 @@
 <table>
   <thead>
     <tr>
+      <th>Image</th>
       <th>Description</th>
       <th>User_id</th>
       <th></th>
@@ -14,6 +15,7 @@
   <tbody>
     <% @pins.each do |pin| %>
       <tr>
+        <td><%= image_tag pin.image.url(:thumb) %></td>
         <td><%= pin.description %></td>
         <td><%= pin.user_id %></td>
         <td><%= pin.user.email if pin.user %></td>
