--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -3,6 +3,7 @@
 <p>
   <strong>Description:</strong>
   <%= @pin.description %>
+  <%= image_tag @pin.image.url(:medium) if @pin.image %>
 </p>
 
 <% if @pin.user == current_user %>
