--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,12 +1,22 @@
-<p id="notice"><%= notice %></p>
+<%= link_to 'Back', pins_path %>
 
-<p>
-  <strong>Description:</strong>
-  <%= @pin.description %>
-  <%= image_tag @pin.image.url(:medium) if @pin.image %>
-</p>
+<div class="row">
+	<div class="col-md-offset-2 col-md-8">
+	  <div class="panel panel-default">
+			<div class="panel-heading center">
+			  <%= image_tag @pin.image.url(:medium) if @pin.image %>	
+			</div>
+			<div class="panel-body">
+				<p><%= @pin.description %></p>
+				<p><strong><%= @pin.user.email if @pin.user %></strong></p>
 
-<% if @pin.user == current_user %>
-  <%= link_to 'Edit', edit_pin_path(@pin) %> |
-  <%= link_to 'Back', pins_path %>
-<% end %>
+				<% if @pin.user == current_user %>
+				  <div class="actions">
+				  	<%= link_to 'Edit', edit_pin_path(@pin) %>				  	
+				  </div>
+				  
+				<% end %>
+			</div>
+		</div>
+	</div>
+</div>
