--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,11 +20,31 @@
         <li><%= link_to "Pins", pins_path %></li>
         
         <% if user_signed_in? %>        
-          <li><%= link_to 'New Pin', new_pin_path %></li>
-          <li><%= link_to "Account Settings", edit_user_registration_path %></li>   
-          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>             
+          <li>
+            <%= link_to new_pin_path do %>
+              <span class="glyphicon glyphicon-plus"></span> 
+                New Pin
+            <% end %>
+          </li>
+          <li>
+            <%= link_to edit_user_registration_path do %>
+              <span class="glyphicon glyphicon-cog"></span>
+              Account Settings
+            <% end %>
+          </li>   
+          <li>
+            <%= link_to destroy_user_session_path, method: :delete do %>
+              <span class="glyphicon glyphicon-log-out"></span>
+              Log out
+            <% end %>
+          </li>             
         <% else %>
-          <li><%= link_to "Log in", new_user_session_path %></li>
+          <li>
+            <%= link_to new_user_session_path do %>
+              <span class="glyphicon glyphicon-log-in"></span>
+              Log in
+            <% end %>
+          </li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
