--- a/app/views/pins/new.html.erb
+++ b/app/views/pins/new.html.erb
@@ -2,4 +2,9 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', pins_path %>
+<p>
+  <%= link_to pins_path do %>
+   <span class="glyphicon glyphicon-arrow-left"></span>
+     Back
+  <% end %>
+</p>
