--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,5 +1,3 @@
-<%= link_to 'Back', pins_path %>
-
 <div class="row">
 	<div class="col-md-offset-2 col-md-8">
 	  <div class="panel panel-default">
@@ -12,7 +10,10 @@
 
 				<% if @pin.user == current_user %>
 				  <div class="actions">
-				  	<%= link_to 'Edit', edit_pin_path(@pin) %>				  	
+				  	<%= link_to edit_pin_path(@pin) do %>
+            <span class="glyphicon glyphicon-edit"></span> 
+              Edit
+          <% end %>				  	
 				  </div>
 				  
 				<% end %>
@@ -20,3 +21,10 @@
 		</div>
 	</div>
 </div>
+
+<p>
+  <%= link_to pins_path do %>
+   <span class="glyphicon glyphicon-arrow-left"></span>
+     Back
+  <% end %>
+</p>
