--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -26,3 +26,8 @@
   </div>
 <% end %>
 </div>
+<div class="center">
+  <p>
+    <%= will_paginate @pins, renderer: BootstrapPagination::Rails  %>
+  </p>
+</div>
