--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -6,7 +6,7 @@
 			</div>
 			<div class="panel-body">
 				<p><%= @pin.description %></p>
-				<p><strong><%= @pin.user.email if @pin.user %></strong></p>
+				<p>posted by <strong><%= @pin.user.name if @pin.user %></strong></p>
 
 				<% if @pin.user == current_user %>
 				  <div class="actions">
